--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -5,6 +5,9 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
+  color: $dark;
+  line-height: 1.5;
 }
 
 ul, ol {
@@ -22,25 +25,20 @@ img, video {
 button, input, textarea, select {
   font: inherit;
 }
-body {
-    font-family: 'Roboto', sans-serif;
-    color: $dark;
-}
 .text-center {
     text-align: center;
 }
 
 .container {
     max-width: 1170px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-inline:clamp(10px,1vw,15px);
     margin: 0 auto;
 }
 .section-title {
     font-size: clamp(25px,2.5vw,36px);
     font-weight:$fw-regular;
     margin-top: 0;
-    margin-bottom: 20px; 
+    margin-bottom:clamp(1rem, 2vw, 2rem); 
     &--center {
         text-align: center;
     }
@@ -51,34 +49,23 @@ body {
     text-align: center;
 }
 .cta-banner {
-    padding-top: 72px;
-    padding-bottom: 113px;
+    padding-block:clamp(2.5rem, 6vw, 6rem) clamp(3rem, 6vw, 7rem);
     background-color: $dark;
     color: #fff;
     text-align: center;
     
     &__subtitle {
-        font-size: 22px;
+        font-size:clamp(14px,2vw,22px);
         margin-bottom: 0;
-        
-        @include media(650px) {
-            font-size: 14px;
-        }
     }
     
     &__title {
-        font-size: 48px;
-        margin-top: 15px;
-        margin-bottom: 42px;
-        
-        @include media(650px) {
-            font-size: 25px;
-        }
+        font-size:clamp(25px,2vw,48px);
+        margin-block:0.938em 2.625em;
     }
 }
 .contact {
-    padding-top: 122px;
-    padding-bottom: 130px;
+   padding-block: clamp(4rem, 6vw, 7.5rem);
 }
 
 .visually-hidden {
